--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,42 +48,64 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          echo "开始部署到云服务器..."
+          echo "开始Docker部署到云服务器..."
           
           # 切换到项目目录
           cd /www/wwwroot/etermaiweb || { echo "项目目录不存在"; exit 1; }
           
-          # 停止服务 (如果正在运行)
-          sudo systemctl stop etermaiweb || echo "服务未运行"
-          
-          # 备份当前版本
-          sudo cp -r /www/wwwroot/etermaiweb /www/wwwroot/etermaiweb_backup_$(date +%Y%m%d_%H%M%S) || echo "备份失败"
-          
           # 拉取最新代码
-          sudo git fetch origin
-          sudo git reset --hard origin/main
+          git fetch origin
+          git reset --hard origin/main
           
-          # 安装/更新Python依赖
-          sudo python3 -m pip install -r requirements.txt
+          # 停止现有容器
+          docker-compose down || echo "没有运行的容器"
           
-          # 运行数据库迁移 (如果需要)
-          # sudo python3 manage.py db upgrade
+          # 备份数据（数据库卷）
+          echo "备份数据库数据..."
+          docker run --rm -v etermaiweb_postgres_data:/data -v $(pwd)/backup:/backup alpine tar czf /backup/postgres_backup_$(date +%Y%m%d_%H%M%S).tar.gz -C /data . || echo "备份失败"
           
-          # 重新启动服务
-          sudo systemctl start etermaiweb
-          sudo systemctl enable etermaiweb
+          # 清理未使用的Docker资源
+          docker system prune -f || echo "清理失败"
           
-          # 检查服务状态
-          sleep 5
-          if sudo systemctl is-active --quiet etermaiweb; then
-            echo "✅ 部署成功！服务正在运行"
+          # 构建并启动新容器
+          docker-compose up -d --build
+          
+          # 等待服务启动
+          echo "等待服务启动..."
+          sleep 30
+          
+          # 检查容器状态
+          if docker-compose ps | grep -q "Up"; then
+            echo "✅ Docker容器启动成功"
           else
-            echo "❌ 部署失败！服务未能正常启动"
-            sudo systemctl status etermaiweb
+            echo "❌ Docker容器启动失败"
+            docker-compose logs
             exit 1
           fi
           
-          echo "🎉 部署完成！"
+          # 健康检查
+          max_attempts=10
+          attempt=1
+          while [ $attempt -le $max_attempts ]; do
+            if curl -f http://localhost/api/health > /dev/null 2>&1; then
+              echo "✅ 应用健康检查通过"
+              break
+            else
+              echo "⏳ 等待应用启动... (尝试 $attempt/$max_attempts)"
+              sleep 10
+              attempt=$((attempt + 1))
+            fi
+          done
+          
+          if [ $attempt -gt $max_attempts ]; then
+            echo "❌ 应用健康检查失败"
+            docker-compose logs app
+            exit 1
+          fi
+          
+          echo "🎉 Docker部署完成！"
+          echo "容器状态:"
+          docker-compose ps
           
     - name: 发送部署通知 (可选)
       if: always()
