修改为直接访问Flask应用5000端口 - 移除Nginx反向代理 - 更新所有文档和脚本中的访问地址为IP:5000 - 简化Docker架构

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,7 @@ jobs:
           max_attempts=10
           attempt=1
           while [ $attempt -le $max_attempts ]; do
-            if curl -f http://localhost/api/health > /dev/null 2>&1; then
+            if curl -f http://localhost:5000/api/health > /dev/null 2>&1; then
               echo "✅ 应用健康检查通过"
               break
             else
