--- a/docker-compose.simple.yml
+++ b/docker-compose.simple.yml
@@ -10,7 +10,7 @@ services:
       - "5000:5000"
     environment:
       - FLASK_ENV=production
-      - DATABASE_URL=postgresql://postgres:password@db:5432/etermaiweb
+      - DATABASE_URL=postgresql://postgres:Postgre,.1@db:5432/etermaiweb
       - REDIS_URL=redis://redis:6379/0
     depends_on:
       - db
@@ -34,7 +34,7 @@ services:
     environment:
       POSTGRES_DB: etermaiweb
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: Postgre,.1
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
