--- a/docker-compose.simple.yml
+++ b/docker-compose.simple.yml
@@ -10,10 +10,9 @@ services:
       - "5000:5000"
     environment:
       - FLASK_ENV=production
-      - DATABASE_URL=postgresql://postgres:Postgre,.1@db:5432/etermaiweb
+      - DATABASE_URL=postgresql://postgres:Postgre,.1@172.17.0.1:5432/etermaiweb
       - REDIS_URL=redis://redis:6379/0
     depends_on:
-      - db
       - redis
     volumes:
       - ./logs:/app/logs
@@ -26,19 +25,7 @@ services:
       retries: 3
       start_period: 40s
 
-  # PostgreSQL数据库
-  db:
-    image: postgres:15-alpine
-    container_name: etermaiweb-db
-    restart: always
-    environment:
-      POSTGRES_DB: etermaiweb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Postgre,.1
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - etermaiweb-network
+
 
   # Redis缓存
   redis:
@@ -52,7 +39,6 @@ services:
       - etermaiweb-network
 
 volumes:
-  postgres_data:
   redis_data:
 
 networks:
