--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 自动同步代码到云服务器
+name: 自动同步代码到宝塔面板
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     types: [ closed ]
 
 jobs:
-  deploy:
+  sync-code:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     
@@ -16,31 +16,7 @@ jobs:
     - name: 检出代码
       uses: actions/checkout@v4
       
-    - name: 设置Python环境
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: 缓存Python依赖
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          
-    - name: 安装依赖
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
-    - name: 运行测试 (可选)
-      run: |
-        # 如果有测试文件，可以运行测试
-        # python -m pytest tests/
-        echo "测试步骤 - 暂时跳过"
-        
-    - name: 同步代码到云服务器
+    - name: 同步代码到宝塔面板服务器
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.HOST }}
@@ -48,18 +24,28 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          echo "开始同步代码到云服务器..."
+          echo "🚀 开始同步代码到宝塔面板服务器..."
+          echo "📅 时间: $(date)"
+          echo "📍 目标目录: /www/wwwroot/etermaiweb"
+          echo ""
           
-          # 执行代码更新脚本
+          # 执行代码同步脚本
           sudo /www/wwwroot/etermaiweb/deploy/update-code.sh
           
-    - name: 发送部署通知 (可选)
+          echo ""
+          echo "✅ 代码同步完成！"
+          echo "🎯 请在宝塔面板中重启Python项目"
+          
+    - name: 发送部署通知
       if: always()
       run: |
         if [ "${{ job.status }}" == "success" ]; then
-          echo "✅ 代码同步成功通知"
-          # 这里可以添加钉钉、企业微信等通知
+          echo "✅ 代码同步成功！"
+          echo "📝 提交信息: ${{ github.event.head_commit.message }}"
+          echo "👤 提交者: ${{ github.event.head_commit.author.name }}"
+          echo "🔗 访问地址: http://47.111.119.238:5000"
+          echo "💡 记得在宝塔面板中重启Python项目"
         else
-          echo "❌ 代码同步失败通知" 
-          # 这里可以添加失败通知
+          echo "❌ 代码同步失败"
+          echo "🔍 请检查GitHub Actions日志"
         fi 
